--- a/Mảng/Luyen Tap 1/Bai1.html
+++ b/Mảng/Luyen Tap 1/Bai1.html
@@ -6,18 +6,19 @@
 </head>
 <body>
 <script>
-    let arr = [];
-    let dem=0;
-    for (let i = 0; i < 5; i++) {
-        arr[i] = prompt("Nhập vào: ");
-    }
-    document.write("Day So Vua Nhap La : " + arr+"<br>");
-    for (let i = 0; i < arr.length; i++) {
-        if (arr[i] >= 10) {
-            dem++
+
+    function iterArr() {
+        let sum = 0;
+        let arr = [];
+        //Your code here
+        for (let i = 0; i < arr.length; i++) {
+            arr[i] = prompt("Nhap vao cac phan tu : ");
+            sum = sum + arr[i];
         }
+        document.write("tong la " + sum);
+        return sum;
     }
-    document.write("Có tất cả " + dem + " số nguyên lớn hơn hoặc bằng 10");
+    iterArr();
 </script>
 </body>
 </html>
