--- a/Hàm/Luyen Tap 1/Bai 4.html
+++ b/Hàm/Luyen Tap 1/Bai 4.html
@@ -13,9 +13,9 @@
         return result;
     }
     result = 0;
-    alert("Truoc goi ham : " + result);
+    document.write("Truoc goi ham : " + result+"<br>");
     result = addNumbers();
-    alert("Sau goi ham :  "+ result);
+    document.write("Sau goi ham :  "+ result);
 </script>
 </body>
 </html>
