--- a/Mảng/Bai1_NoiChuoi.html
+++ b/Mảng/Bai1_NoiChuoi.html
@@ -32,7 +32,7 @@
 <!--    document.write(result.join(''));-->
 <!--</script>-->
 
-<!--Bai 3-->
+<!--&lt;!&ndash;Bai 3&ndash;&gt;-->
 <!--<script>-->
 <!--    let str = 'The Quick Brown Fox';-->
 <!--    document.write("Chuoi cu: "+'The Quick Brown Fox'+"<br>")-->
