--- a/CaseStudy Module 1/YC4_Bai2.html
+++ b/CaseStudy Module 1/YC4_Bai2.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Đặt thức uống</title>
+    <title>Xau ki tu</title>
 </head>
-
 <body>
 <script>
     function differentSymbolsNaive(s) {
@@ -20,9 +18,8 @@
         }
         return s.length - count;
     }
-    let s = prompt("Nhập vào xâu kí tự.")
+    let s = prompt("Nhập vào xâu kí tự.");
     alert(differentSymbolsNaive(s));
 </script>
 </body>
-
 </html>
