--- a/Mảng/Luyen Tap 1/Bai9.html
+++ b/Mảng/Luyen Tap 1/Bai9.html
@@ -16,7 +16,7 @@
     for (let j = 0; j < 10; j++) {
         arr2[j]=prompt("Nhap vao mang b: ")
     }
-    arr3=arr1.concat(arr2);
+    arr3=arr1.concat(arr2);  //concat : dung de noi 2 mang
     document.write("Mang a :"+arr1+"<br>");
     document.write("Mang b:" +arr2+"<br>");
     document.write("Noi 2 mang a va b : "+arr3);
