--- a/CaseStudy Module 1/YC5_Bai2.html
+++ b/CaseStudy Module 1/YC5_Bai2.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mảng 2 chiều</title>
+    <title>mang 2 chieu</title>
 </head>
-
 <body>
 <script>
     function isPrimeNumber(n) {
@@ -17,9 +16,7 @@
         }
         return true;
     }
-
     document.write("Các số nguyên tố trong mảng 2 chiều <br>");
-
     function countPrimeNumber(arr) {
         let count = 0;
         for (let i = 0; i < arr.length; i++) {
@@ -32,15 +29,12 @@
         }
         return count;
     }
-
     let arr = [[1, 2, 3, 4],
         [5, 6, 7, 8],
         [9, 10, 11, 12],
         [13, 14, 15, 16],
         [17, 18, 19, 20]];
-
     document.write("<br>Số lượng số nguyên tố trong mảng:<br>" + countPrimeNumber(arr));
 </script>
 </body>
-
 </html>
